<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal">

    <ImageButton
        android:id="@+id/small_brush"
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:contentDescription="@string/sml"
        android:background="@drawable/button_design"
        android:src="@drawable/small" />

    <ImageButton
        android:id="@+id/medium_brush"
        android:layout_width="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/med"
        android:background="@drawable/button_design"
        android:src="@drawable/medium" />

    <ImageButton
        android:id="@+id/large_brush"
        android:layout_width="30dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/lrg"
        android:background="@drawable/button_design"
        android:src="@drawable/large" />

    <Button
        android:id="@+id/erase_all"
        android:layout_width="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:layout_height="wrap_content"
        android:text="@string/erase_all"
        android:background="@drawable/button_design"
        />
</LinearLayout>