<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MenuActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="#ff33b5e5"
        android:contentDescription="@string/back">
    </ImageView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="140dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="#000064"
                android:contentDescription="@string/pic">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="#000000"
                android:text="@string/welcome">
            </TextView>

            <TextView
                android:id="@+id/n"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="#000000"
                android:text="">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/profile"
                    android:layout_width="150dp"
                    android:layout_height="120dp"
                    android:background="#ff33b5e5"
                    android:src="@mipmap/pro"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/icons" />

                <ImageButton
                    android:id="@+id/open"
                    android:layout_width="150dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="30dp"
                    android:background="@mipmap/back"
                    android:src="@drawable/ic_launcher_foreground"
                    android:contentDescription="@string/icons" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/start"
                    android:layout_width="150dp"
                    android:layout_height="120dp"
                    android:background="#ff33b5e5"
                    android:src="@mipmap/st"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/icons" />

                <ImageButton
                    android:id="@+id/contact"
                    android:layout_width="150dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="30dp"
                    android:background="@mipmap/back"
                    android:src="@drawable/ic_launcher_foreground"
                    android:contentDescription="@string/icons" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>